# 2fa-helpdesk

./: .env.test  .env.test.local  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  docker-env.sample  renovate.json5  requirements.txt  sonar-project.properties
archive/: poc.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/testrunner/: Dockerfile  Pipfile
docker/twofa-helpdesk-backend/: Dockerfile
docker/twofa-helpdesk-extensions/: Dockerfile
docker/twofa-helpdesk-frontend/: Dockerfile
extensions/: README.md  loader.sh
extensions/docker/: Dockerfile
frontend/: .env.example  .gitignore  90_generate_config.py  90_generate_config.sh  dockerfile  eslint.config.js  index.html  nginx.conf  package.json  run_dev_with_nubus.sh  tsconfig.json  tsconfig.typecheck.json  vite.config.ts  vitest.config.js
frontend/__tests__/: style.ts
frontend/api/: index.ts  runtime.ts
frontend/public/: openapi.json
frontend/src/: App.vue  _DEL.css  base-styles.css  main.ts  shims-vue.d.ts  style.css  theme.css  vite-env.d.ts
frontend/tests/: auth.test.ts  style.test.ts
helm/: .gitignore  .gitlab-ci.yaml  Chart.yaml  values.yaml
helm/templates/: configmap.yaml  deployment-ui.yaml  deployment.yaml  ingress.yaml  service-ui.yaml  service.yaml
helm/twofa-helpdesk/: Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helper_scripts/: .gitignore  README.md  create_configmap_template.py  deployment.yaml  environment.sh  forward_ports.sh  ingress.yaml  service.yaml  test_keycloak_api.py  test_keycloak_connection_and_auth.sh  test_udm_connection.py
helper_scripts/openapi_conversion/: Dockerfile  README.md  (+2 more)
src/: 2fa-backend.drawio  main.py  poc.py  pyproject.toml
src/2fa_helpdesk/: app.py  main.py
src/2fa_helpdesk/adapters/: api.py  auth.py  helpers.py  keycloak.py  two_fa.py  udm.py  users.py
src/2fa_helpdesk/app/: app.py  main.py
(+77 files in other folders)
