[tool.poetry]
name = "2fa-helpdesk"
version = "0.1.0"
description = "Univention 2FA Helpdesk - Additional tools for the administration of two factor authentication"
authors = [
  "Univention GmbH <packages@univention.de>",
]
license = "GNU Affero General Public License v3"
# packages = [{ include = "server", from = "src" }, ]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-keycloak = "^5.3.0"
udm-rest-api-client = "^0.0.2"
pyJWT = "^2.10.0"
uvicorn = "^0.27.0"
fastapi = "^0.110.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
extend-select = ["COM", "E501"]
exclude = [
    "archive/",
    "helper_scripts/",
]
